--- a/views/resources/user/home.ejs
+++ b/views/resources/user/home.ejs
@@ -1,5 +1,20 @@
 <%- include('layouts/header') -%>
   <div class="content-wrapper">   
-    Home
+  <div class="container">
+  <div class="row">
+  	<div class="col-12">
+	    <div class="card mt-4 ml-2">
+    		<div class="card-body text-center">
+    		  <img src="/assets/images/home.png"
+    		  	style="width:30%">
+    		  	<p>
+    		  		<h4>Hallo Semua Selamat Datang </h4>
+    		  		<h6>Di Perpustakan Kami</h6>
+    		  	</p>
+    		</div>
+    	</div>
+	  </div>
+    </div>
+   </div>
   </div>
 <%- include('layouts/footer') -%>
